--- a/app/index.html
+++ b/app/index.html
@@ -11,20 +11,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+  <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
-  <ul class="menu">
-    <li><a href="#/Apps">Apps</a></li>
-    <li><a href="#/avail">Available</a></li>
-  </ul>
+<body layout="column">
 
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+   <!-- Container #1 (see wireframe) -->
+    <md-toolbar layout="row" >
+      <h1>Ceph PlugIns Portal</h1>
+    </md-toolbar>
 
-  <div ng-view></div>
+    <!-- Container #2 -->
+    <div flex layout="row">
+
+        <!-- Container #3 -->
+        <md-sidenav md-is-locked-open="true" class="md-whiteframe-z2">
+          <md-list>
+            <md-list-item>
+              <md-button ng-href="#/avail">Available</md-button>
+            </md-list-item>
+
+            <md-list-item>
+              <md-button ng-href="#/Apps">Apps</md-button>
+            </md-list-item>
+          </md-list>
+        </md-sidenav>
+
+        <!-- Container #4 -->
+        <md-content flex id="content">
+          <div ng-view></div>
+        </md-content>
+
+    </div>
+  <!-- 
 
   <!-- <div>Angular seed app: v<span app-version></span></div> -->
 
@@ -33,6 +53,9 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-aria/angular-aria.js"></script>
+  <script src="bower_components/angular-material/angular-material.js"></script>
   <script src="app.js"></script>
   <script src="InstalledPlugins/InstallCtrl.js"></script>
   <script src="available/available.js"></script>
