--- a/app/InstalledPlugins/InstalledPlugins.html
+++ b/app/InstalledPlugins/InstalledPlugins.html
@@ -1,18 +1,39 @@
-<p>This is the partial for installed plugins.</p>
-<div ng-repeat="plugin in plugins">
-    <p ng-if="plugin.installed">
-        <span ng-bind="plugin.name"></span> | versions: <span ng-bind="plugin.version"></span> |
-        <button type="button" ng-click="showInfo(plugin)">Info</button>|
-        <button type="button" ng-click="remove(plugin)">Remove</button> |
-        <button type="button" ng-click="enable(plugin)" ng-show="!plugin.enabled">Enable</button>
-        <button type="button" ng-click="disable(plugin)" ng-show="plugin.enabled">Disable</button>
-    </p>
-</div>
+<div layout="row">
+   <section flex="70">
+      <md-subheader class="md-no-sticky">Installed PlugIn Lists</md-subheader>
+      <md-list ng-repeat="plugin in plugins">
+         <md-card ng-if="plugin.installed">
+            <md-card-title>
+               <md-card-title-text>
+                  <span class="md-headline" ng-bind="plugin.name"></span>
+                  <span class="md-subhead">Version : {{plugin.version}}</span>
+               </md-card-title-text>
+               <md-card-title-media>
+                  <div class="md-media-md card-media"></div>
+               </md-card-title-media>
+            </md-card-title>
+            <md-card-actions layout="row" layout-align="end center">
+               <md-button class="md-icon-button" ng-click="showInfo(plugin)">
+                  <md-icon md-svg-icon="../assets/img/info.svg"></md-icon>
+               </md-button>
+               <md-button ng-click="remove(plugin)">Remove</md-button>
+               <md-button ng-click="enable(plugin)" ng-show="!plugin.enabled">Enable</md-button>
+               <md-button ng-click="disable(plugin)" ng-show="plugin.enabled">Disable</md-button>
+            </md-card-actions>
+         </md-card>     
+      </md-list>
+   </section>
 
-<div ng-show="App.state.info">
-    <li> <h2 ng-bind="App.name"></h2> </li>
-    <li> Version : <span ng-bind="App.version"></span> </li>
-    <li> App Description : <span ng-bind="App.description"></span> </li>
-    <button type="button" ng-click="closeInfo()">Close</button>
+   <section ng-show="App.state.info" flex="30">  
+      <md-toolbar class="md-theme-light">
+         <h1 class="md-toolbar-tools">Plugin Info</h1>
+      </md-toolbar>
+      <md-content layout-padding>
+         <li> <h2 ng-bind="App.name"></h2> </li>
+         <li> Version : <span ng-bind="App.version"></span> </li>
+         <li> Info : <span ng-bind="App.description"></span> </li>
+         <button type="button" ng-click="closeInfo()">Close</button>
+      </md-content>
+   </section>
 </div>
 
